<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="20dp">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings" android:textAppearance="?attr/textAppearanceHeadline5" />
    <Button android:id="@+id/english_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="English" />
    <Button android:id="@+id/vietnamese_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Tiếng Việt" />
    <Button android:id="@+id/privacy_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/privacy_options" />
    <Button android:id="@+id/reset_onboarding_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/reset_onboarding" />
    <Button android:id="@+id/premium_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/go_premium" />
    <Space android:layout_width="1dp" android:layout_height="0dp" android:layout_weight="1" />
    <FrameLayout android:id="@+id/banner_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="50dp" />
</LinearLayout>
